# SPDX-FileCopyrightText: 2025 2025 Contributors to the Media eXchange Layer project.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "gst-mxl-rs"
description = "MXL plugin"
repository.workspace = true
edition.workspace = true
publish.workspace = true
version.workspace = true
license.workspace = true

[package.metadata.cargo-machete]
ignored = ["regex"]

[dependencies]
bitstream-io = "4"
crossbeam = "0.8.4"
glib = "0.21.5"
gstreamer = "0.24.4"
gstreamer-audio = "0.24.4"
gstreamer-base = "0.24.4"
mxl = { path = "../mxl" }
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-test = "0.2.5"

# If this is not included, tracing won't work while debugging
regex = { version = "1", features = ["unicode-case"] }

[features]
tracing = []

[lib]
name = "gstmxl"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = { version = "0.8.3" }
